--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mantine/notifications": "^7.12.2",
     "@mantine/spotlight": "^7.12.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.14.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "sass": "^1.78.0"
   },
   "devDependencies": {
     "@types/node": "^20",
