--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.14.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "diff": "^7.0.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +27,7 @@
     "sass": "^1.78.0"
   },
   "devDependencies": {
+    "@types/diff": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
