--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.12.2",
-    "@mantine/dates": "^7.12.2",
-    "@mantine/hooks": "^7.12.2",
-    "@mantine/modals": "^7.12.2",
-    "@mantine/notifications": "^7.12.2",
-    "@mantine/spotlight": "^7.12.2",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tabler/icons-react": "^3.14.0",
-    "axios": "^1.7.7",
-    "dayjs": "^1.11.13",
-    "diff": "^7.0.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2",
-    "sass": "^1.78.0"
-  },
-  "devDependencies": {
-    "@types/diff": "^5.2.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "eslint": "eslint .",
+        "eslint-fix-dry": "eslint . --fix-dry-run",
+        "eslint-fix": "eslint . --fix"
+    },
+    "dependencies": {
+        "@mantine/core": "^7.12.2",
+        "@mantine/dates": "^7.12.2",
+        "@mantine/hooks": "^7.12.2",
+        "@mantine/modals": "^7.12.2",
+        "@mantine/notifications": "^7.12.2",
+        "@mantine/spotlight": "^7.12.2",
+        "@reduxjs/toolkit": "^2.2.7",
+        "@tabler/icons-react": "^3.14.0",
+        "axios": "^1.7.7",
+        "dayjs": "^1.11.13",
+        "diff": "^7.0.0",
+        "next": "^14.2.13",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-redux": "^9.1.2",
+        "sass": "^1.78.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.11.1",
+        "@playwright/test": "^1.47.2",
+        "@types/diff": "^5.2.2",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "14.2.7",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "jest": "^29.7.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.7.0"
+    }
 }
