--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "semi": false,
-  "tabWidth": 4,
-  "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+    "semi": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "printWidth": 100,
+    "trailingComma": "none",
+    "endOfLine": "crlf"
 }
