--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "next lint",
         "eslint": "eslint .",
         "eslint-fix-dry": "eslint . --fix-dry-run",
-        "eslint-fix": "eslint . --fix"
+        "eslint-fix": "eslint . --fix",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@mantine/core": "^7.12.2",
@@ -46,5 +47,8 @@
         "tailwindcss": "^3.4.1",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.7.0"
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix"
     }
 }
