--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
         "typescript-eslint": "^8.7.0"
     },
     "lint-staged": {
-        "*.js": "eslint --cache --fix"
+        "*.{ts,tsx}": [
+            "prettier --write",
+            "eslint --max-warnings 0 ."
+        ]
     }
 }
