--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "eslint": "eslint .",
         "eslint-fix-dry": "eslint . --fix-dry-run",
         "eslint-fix": "eslint . --fix",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "unit:test": "vitest --root tests/"
     },
     "dependencies": {
         "@mantine/core": "^7.12.2",
@@ -33,20 +34,24 @@
     "devDependencies": {
         "@eslint/js": "^9.11.1",
         "@playwright/test": "^1.47.2",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.0.1",
         "@types/diff": "^5.2.2",
         "@types/eslint__js": "^8.42.3",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^8.57.1",
         "eslint-config-next": "14.2.7",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "jest": "^29.7.0",
+        "jsdom": "^25.0.1",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.6.2",
-        "typescript-eslint": "^8.7.0"
+        "typescript-eslint": "^8.7.0",
+        "vitest": "^2.1.1"
     },
     "lint-staged": {
         "**/*.{ts,tsx}": [
